overflow fix

--- a/responsivnes.css
+++ b/responsivnes.css
@@ -21,6 +21,7 @@
 
     #hamburger-nav {
         display: flex;
+        flex-wrap: wrap
     }
 
     #experience,
